Refactor: Dashboard UX improvements & sync dev_log

--- a/apps/dashboard/icons.conf
+++ b/apps/dashboard/icons.conf
@@ -4,29 +4,29 @@
 # Add or modify icons here - no need to edit generate.sh
 
 # Core Apps
-portainer=🐳
-filebrowser=📁
-qbittorrent=⬇️
-uptime-kuma=📊
-telegram-bot=🤖
-whatsapp-bot=💬
-glances=🖥️
+portainer=fa-solid fa-box-open
+filebrowser=fa-solid fa-folder-open
+qbittorrent=fa-solid fa-magnet
+uptime-kuma=fa-solid fa-heart-pulse
+telegram-bot=fa-brands fa-telegram
+whatsapp-bot=fa-brands fa-whatsapp
+glances=fa-solid fa-eye
 
-dockge=🏗️
+dockge=fa-solid fa-cubes
 
 # Archived Apps (ready to use if enabled)
-changedetection=👁️
-homarr=🏠
-it-tools=🛠️
-n8n=⚡
-stirling-pdf=📄
-jellyfin=🍿
+changedetection=fa-solid fa-glasses
+homarr=fa-solid fa-house-user
+it-tools=fa-solid fa-screwdriver-wrench
+n8n=fa-solid fa-bolt
+stirling-pdf=fa-solid fa-file-pdf
+jellyfin=fa-solid fa-film
 
 # Default icon for unknown apps
 # (Don't remove this - used as fallback)
-__default__=🔗
+__default__=fa-solid fa-link
 
 # Add your custom apps below:
-# myapp=🚀
-# database=🗄️
-# ai=🧠
+# myapp=fa-solid fa-rocket
+# database=fa-solid fa-database
+# ai=fa-solid fa-brain
