--- a/apps/dashboard/icons.conf
+++ b/apps/dashboard/icons.conf
@@ -5,22 +5,22 @@
 
 # Core Apps
 portainer=fa-solid fa-box-open
-filebrowser=fa-solid fa-folder-open
-qbittorrent=fa-solid fa-magnet
 uptime-kuma=fa-solid fa-heart-pulse
 telegram-bot=fa-brands fa-telegram
 whatsapp-bot=fa-brands fa-whatsapp
-glances=fa-solid fa-eye
-
-dockge=fa-solid fa-cubes
 
 # Archived Apps (ready to use if enabled)
 changedetection=fa-solid fa-glasses
+dockge=fa-solid fa-cubes
+filebrowser=fa-solid fa-folder-open
+glances=fa-solid fa-eye
 homarr=fa-solid fa-house-user
 it-tools=fa-solid fa-screwdriver-wrench
-n8n=fa-solid fa-bolt
-stirling-pdf=fa-solid fa-file-pdf
 jellyfin=fa-solid fa-film
+n8n=fa-solid fa-bolt
+qbittorrent=fa-solid fa-magnet
+stirling-pdf=fa-solid fa-file-pdf
+watchtower=fa-solid fa-rotate
 
 # Default icon for unknown apps
 # (Don't remove this - used as fallback)
